--- a/Web/pitt-menu/public/index.html
+++ b/Web/pitt-menu/public/index.html
@@ -37,5 +37,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDpBoyI13RY9mHU2C1cOSyAC_tfr3-hu5U",
+    authDomain: "menu-parser-7ba02.firebaseapp.com",
+    databaseURL: "https://menu-parser-7ba02.firebaseio.com",
+    projectId: "menu-parser-7ba02",
+    storageBucket: "menu-parser-7ba02.appspot.com",
+    messagingSenderId: "1027964664238"
+  };
+  firebase.initializeApp(config);
+</script>
   </body>
 </html>
