--- a/Web/pitt-menu/public/index.html
+++ b/Web/pitt-menu/public/index.html
@@ -15,7 +15,8 @@
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
     <link href="https://fonts.googleapis.com/css?family=Rubik:700" rel="stylesheet">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <title>Pitt Menu</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
