Front End pulls Images from Firebase;

--- a/Web/pitt-menu/public/index.html
+++ b/Web/pitt-menu/public/index.html
@@ -16,6 +16,8 @@
     />
     <link href="https://fonts.googleapis.com/css?family=Rubik:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <title>Pitt Menu</title>
   </head>
   <body>
